gcc/testsuite/g++.dg/overload/ellipsis3.C
struct A {
  A(...);
};

int main()
{
  volatile A a;
  volatile A a2(a);		// { dg-error "volatile" }
}
